--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^6.11.1",
+    "@sanity/image-url": "^1.0.2",
+    "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "eslint": "^8",
