--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@sanity/client": "^6.11.1",
     "@sanity/image-url": "^1.0.2",
+    "@stripe/stripe-js": "^2.4.0",
+    "canvas-confetti": "^1.9.2",
     "next": "14.0.4",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "stripe": "^14.14.0"
   },
   "devDependencies": {
     "eslint": "^8",
